# gym2048

./: pyproject.toml
gym2048/: __init__.py
gym2048/envs/: __init__.py  game.py
gym2048/wrappers/: __init__.py  step_reward.py
tests/: test.py
